syntax = "proto3";

import "github.com/NEU-SNS/ReverseTraceroute/datamodel/intersectrequest.proto";

package atlas.pb;

option go_package = "pb";

service Atlas {
    rpc GetIntersectingPath(stream datamodel.IntersectionRequest) returns (stream datamodel.IntersectionResponse) {}
    rpc GetPathsWithToken(stream datamodel.TokenRequest) returns (stream datamodel.TokenResponse) {}
}
